assign width to first cat img to prevent shrinkage and made beg section flex wrap

--- a/page.css
+++ b/page.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,900;1,400&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,900;1,100;1,400&display=swap');
 body {
     font-family: Roboto;
     margin: 0; 
@@ -18,7 +17,8 @@ body {
     justify-content: space-between; 
     align-items: center; 
     margin: 0; 
-    padding: 20px 120px 100px 120px; 
+    padding: 20px 80px 90px 80px; 
+    flex: 1; 
 }
 
 .links {
@@ -36,12 +36,14 @@ body {
 }
 .container {
     display: flex; 
-    padding: 20px 120px 100px 120px; 
+    padding: 20px 80px 80px 80px; 
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 .hero {
-    max-width: 50%; 
-    gap: 16px; 
+    width: 500px; 
+    padding: 0 20px 20px 0; 
+    height: auto; 
 }
 .awesome {
     color: #F9FAF8; 
@@ -55,7 +57,8 @@ body {
     margin-bottom: 10px; 
 }
 img {
-    width: 45%;  
+    height: auto;
+    width: 500px; 
 }
 .top {
     font-size: 18px;
@@ -64,6 +67,7 @@ img {
     padding:10px 30px 10px 30px; 
     border-radius: 8px;
     border: none; 
+    font-weight:800;
 }
 .midheader {
     display: flex; 
@@ -78,4 +82,22 @@ img {
     padding: 20px; 
     font-size: 18px;
     color: #1F2937; 
+}
+.quotecontainer { 
+    background-color: #E5E7EB;
+    color: #1F2937; 
+    padding: 80px 200px 80px 200px; 
+}
+.quote {
+    font-weight: lighter; 
+    font-style: italic;
+    font-size: 36px; 
+    margin-bottom: 20px; 
+}
+
+.scientist {
+    display: flex; 
+    justify-content: flex-end;
+    font-weight: 800;
+    font-size: 24px; 
 }
